--- a/pom.xml
+++ b/pom.xml
@@ -9,29 +9,41 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>  <!--  Bağımlılıklar    -->
 
         <!--  Selenium için eklendi -->
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-java</artifactId>-->
+<!--            <version>4.3.0</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.3.0</version>
+            <version>4.5.0</version>
         </dependency>
 
         <!-- Cucumber için yüklendi. -->
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<!--        <dependency>-->
+<!--            <groupId>io.cucumber</groupId>-->
+<!--            <artifactId>cucumber-java</artifactId>-->
+<!--            <version>7.5.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>7.5.0</version>
+            <version>7.8.0</version>
             <scope>test</scope>
         </dependency>
-
         <!--TestNG için eklendi -->
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
@@ -43,20 +55,25 @@
 
         <!-- Cucumber ile test ng nin bağlantısı cucumber ile aynı versiyon olmalı -->
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<!--        <dependency>-->
+<!--            <groupId>io.cucumber</groupId>-->
+<!--            <artifactId>cucumber-testng</artifactId>-->
+<!--            <version>7.5.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
-            <version>7.5.0</version>
+            <version>7.8.0</version>
             <scope>test</scope>
         </dependency>
 
         <!-- WebDriver  -->
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.2.3</version>
+            <version>5.3.0</version>
         </dependency>
 
         <dependency>
